--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
 	<title>React App</title>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Dosis&display=swap" rel="stylesheet">
+
+	<!-- <meta http-equiv="Content-Security-Policy"
+		content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'unsafe-inline' 'unsafe-eval'"> -->
 </head>
 
 <body>
